[package]
authors = ["ry755 <ryanst755@gmail.com>"]
name = "tms9918a_emu"
description = "TMS9918A VDP emulator library"
keywords = ["tms9918a", "emulator", "video"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ry755/tms9918a_emu.git"
edition = "2018"
version = "0.2.0"

[dependencies]
minifb = "0.19.1"
rand = "0.7.3"